@@ -1,5 +1,7 @@
 # Head
 
+- References to blank cells now return 0 not blank
+- Fix for SUMIF different sized ranges when fixed references are used
 - Parser now picks up external named references
 - Added a workaround for brackets not being removed in some cases
 - The ruby version of IF() now treats 0 as false and all other numbers as true 
